--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,40 @@
-name: Build and Push Docker Image to ACR
+name: Build & Deploy to Azure Container App
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+
+env:
+  IMAGE_NAME: opengrc
+  REGISTRY: ${{ secrets.ACR_NAME }}.azurecr.io
+  RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
+  CONTAINER_APP: ${{ secrets.CONTAINER_APP_NAME }}
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Azure Login
-        uses: azure/login@v1
+      - name: Log in to Azure
+        uses: azure/login@v2
         with:
-          creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to ACR
+      - name: Log in to Azure Container Registry
         run: az acr login --name ${{ secrets.ACR_NAME }}
 
-      - name: Build and Push Docker Image
+      - name: Build and push Docker image
         run: |
-          IMAGE_NAME=open-grc
-          docker build -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/$IMAGE_NAME:latest .
-          docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/$IMAGE_NAME:latest
- 
+          docker build -t $REGISTRY/$IMAGE_NAME:latest .
+          docker push $REGISTRY/$IMAGE_NAME:latest
+
+      - name: Deploy to Azure Container App
+        run: |
+          az containerapp update \
+            --name $CONTAINER_APP \
+            --resource-group $RESOURCE_GROUP \
+            --image $REGISTRY/$IMAGE_NAME:latest
