--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy to Azure Container App
+name: Deploy OpenGRC to Azure (Production)
 
 on:
   push:
@@ -13,13 +13,17 @@ env:
 
 jobs:
   build-and-deploy:
+    name: Build and Deploy Production
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to Azure
+      - name: Azure Login (OIDC)
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -34,16 +38,29 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Docker image
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Deploy to Azure Container App
+      - name: Deploy to Azure Container App (Production)
         run: |
           az containerapp update \
             --name $CONTAINER_APP \
             --resource-group $RESOURCE_GROUP \
-            --image $REGISTRY/$IMAGE_NAME:latest
+            --image $REGISTRY/$IMAGE_NAME:${{ github.sha }}
+          echo "✅ Deployed image tag: $REGISTRY/$IMAGE_NAME:${{ github.sha }}"
+
+      - name: Verify Deployment Health
+        run: |
+          az containerapp revision list \
+            --name $CONTAINER_APP \
+            --resource-group $RESOURCE_GROUP \
+            --query "[?active==true].{revision: name, health: properties.healthState}" \
+            --output table
